# conseq

./: .gitignore  .pre-commit-config.yaml  3.depfile  README.md  compile.sh  compile_grammar.sh  conseq.py  dep demo.ipynb  dep.py  dep_test.py  depexec.py  depfile  depfile.grako  depfile.py  grammar.grako  grammar.py  notes.txt  pyproject.toml  pyright-ratchet-errors.txt  setup.py  ssh-depfile.txt  test-async-exec.conseq  viz-timeline.R
.github/workflows/: pyright-ratchet.yaml
conseq/: __init__.py  commands.py  config.py  db.py  debug_log.py  delegate_exec_client_test.py  dep.py  dep_test.py  depexec.py  depexec_test.py  depfile.grako  depfile.py  depquery.py  depquery_test.py  depquery_ui.py  dlcache.py  exceptions.py  exec_client.py  exec_client_test.py  exec_client_types.py  execgraph.py  execution_report.py  export_cmd.py  export_test.py  flockish.py  functional_test.py  grammar.py  hashcache.py  helper.py  helper_test.py  main.py  main_test.py  memoize  parse_test.py  patched_resumable_download_handler.py  publish_test.py  pull_test.py  pull_url.py  query.py  report.py  (+14 more)
conseq-delegate-test/: Dockerfile  build.sh  helper.py
conseq/cli/: __init__.py  commands.py  parser.py
conseq/dao/: execution.py  objects.py  signals.py
conseq/static/: ui.jsx  (+4 more)
cpdshelpers/: __init__.py  remote_submit.py  ssh_wrapper.py  taiga_client.py
docker/: Dockerfile  build.sh  helper.py
examples/: async-docker-exec.conseq  docker-local-exec.conseq  run-docker-exec.conseq
samples/: a.conseq  local_docker_exec.conseq  parallize.conseq  sge_long.conseq  t.conseq
scripts/: conseq
(+64 files in other folders)
