[tool.poetry]
name = "conseq"
version = "2.2.0"
description = ""
authors = ["Philip Montgomery <pmontgom@broadinstitute.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
colorlog = "^3.0.1"
requests = "^2.31.0"
tabulate = "^0.9.0"
six = "^1.16.0"
Jinja2 = ">=3.1,<4.0"
TatSu = ">=5.18.0,<6.0"
google-cloud-storage = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pyright-ratchet = {git = "https://github.com/pgm/pyright-ratchet.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
conseq="conseq.main:main"
conseq-helper="conseq.helper:main"
